# sveltekit-d3js-zoom-brush

./: .gitignore  multline_chart.json  readme.md
backend-node/: package-lock.json  package.json
backend-node/src/: index.ts
backend-rust/: Cargo.toml
backend-rust/src/: demoerror.rs  main.rs
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: app.html
frontend/src/lib/: api.ts  models.ts  utils.ts
frontend/src/lib/component/: AxisX.svelte  AxisY.svelte  ChartBrushZoom.svelte  ChartBrushZoom2.svelte  SimpleChart.svelte  SimpleChart2.svelte
frontend/src/routes/: +page.server.ts  +page.svelte
