[package]
name = "multiline-chart-server"
version = "0.0.1"
edition = "2024"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.46.1", features = ["full"] }
serde_json = "1.0.141"
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header", "cookie"] }
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
chrono = { version = "0.4.41", features = ["serde"] }
http-body-util = "0.1.3"
